- Fixed a shop with wrong requirements in database

Add:
- Extra Shade barriers on Sapphire Ridge and Gaia's Garden, leading to Autumn's Fall; and Maroon Valley leading to Bergen Trail 
- There's now an option to have all maps and areas visited beforehand.
- Added an option to the Open World NPC in RH Info Hub to fix any quick menu limitations
- Added extra sandwiches :)

# v0.3.2
Minor update related to upcoming Mod Manager compatibility

Fixes:
- Schneider doesn't spawn and fall into the void in Vermillion Basement

Changes:
- Henry quest (Bergen, Maroon, Gaia) and Promise is a Promise (Bergen, Maroon, Gaia) quests can be started without the prerequisites
- Moved the trigger that doesn't let you enter Guild HQ to First Scholars area instead of the whole guilds area. This allows doing Last Minute Heroes quest without issues
- a secret

# v0.3.1

Fixes:
- Weird collision issues with barrier blocks in Autumn's Fall entrance 
- Made the DLC maps requirements dependant on randomizer DLC activate options, for any possible dlc applications in the future
- Fixed the Meteor Shade cutscene having wrong conditions which made the player softlock in RH expo space
- Added a emergency exit NPC on Rookie Harbor expo space in case player gets stuck there

# v0.3.0

New:
- DLC areas access first implementation. Now you should be able to get to these areas as soon as you gain access to their locations. This also includes being able to do the raid (for no reason yet)
- Enhanced Skip Beginning: Allows skipping Rhombus Dungeon and start right away in Rookie Harbor quest hub.

Changes:
- Added visuals to determine when VT barrier is locked by boss or shades
- Less clutter in Expo Space for easier maintenance later
- Lower puzzle in Sinus Transmit room in Zir'vitar doesn't hard-require heat and cold anymore, and can be solved with any element (elements spawned by default)
- Entrances to So'najiz and Zir'vitar are active by default