@@ -167,5 +167,19 @@
       "loopCount": 1,
       "type": { "type": "MAP_ENTERED" }
     }
+  },
+  {
+    "type": "SET_KEY",
+    "index": "lower-key-requirement-mine",
+    "content": {
+      "frequency": "ALWAYS",
+      "repeat": "ONCE",
+      "condition": "cold-dng.elevator-on",
+      "eventType": "CUTSCENE",
+      "overrideSideMessage": false,
+      "event": [ { "ignoreSlowDown": false, "type": "WAIT", "time": 0.3 }, { "withElse": true, "type": "IF", "condition": "!party.has.Emilie", "thenStep": [ { "type": "START_PRIVATE_MSG" }, { "side": "RIGHT", "order": 0, "clearSide": false, "type": "ADD_MSG_PERSON", "person": { "person": "main.lea", "expression": "DEFAULT" } }, { "side": "LEFT", "order": 0, "clearSide": false, "type": "ADD_MSG_PERSON", "person": { "person": "main.emilie", "expression": "DEFAULT" } }, { "message": { "en_US": "Bonjour, Lea!", "de_DE": "Bonjour, Lea!", "fr_FR": "fr_FR", "langUid": 121, "zh_CN": "你好，莉亚！", "ja_JP": "ボンジュール、レア！", "ko_KR": "안녕, 레아!", "zh_TW": "你好，莉亞！" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.emilie", "expression": "DEFAULT" } }, { "message": { "en_US": "Hi!", "de_DE": "Hi!", "fr_FR": "fr_FR", "langUid": 122, "zh_CN": "你好！", "ja_JP": "やぁ！", "ko_KR": "안녕!", "zh_TW": "你好！" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.lea", "expression": "EXCITED" } }, { "message": { "en_US": "Are you doing the Temple Mine?", "de_DE": "Are you doing the Temple Mine?", "fr_FR": "fr_FR", "langUid": 123, "zh_CN": "Are you doing the Temple Mine?", "ja_JP": "Are you doing the Temple Mine?", "ko_KR": "Are you doing the Temple Mine?", "zh_TW": "Are you doing the Temple Mine?" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.emilie", "expression": "SMILE" } }, { "message": { "en_US": "And without waiting for me?", "de_DE": "And without waiting for me?", "fr_FR": "fr_FR", "langUid": 143, "zh_CN": "And without waiting for me?", "ja_JP": "And without waiting for me?", "ko_KR": "And without waiting for me?", "zh_TW": "And without waiting for me?" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.emilie", "expression": "SUSPICIOUS" } }, { "message": { "en_US": "Anyway, Lukas told me that bottom floors are easier than before", "de_DE": "Anyway, Lukas told me that bottom floors are easier than before", "fr_FR": "fr_FR", "langUid": 124, "zh_CN": "他们好像在招收新成员！", "ja_JP": "なんでも、新しいメンバーを探してるんだってさ！", "ko_KR": "새로운 멤버를 찾는다나 봐!", "zh_TW": "他們好像在招募新成員！" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.emilie", "expression": "EMBARRASSED" } }, { "message": { "en_US": "...!", "de_DE": "...!", "fr_FR": "fr_FR", "langUid": 125, "zh_CN": "…！", "ja_JP": "...！", "ko_KR": "...!", "zh_TW": "…！" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.lea", "expression": "ASTONISHED" } }, { "message": { "en_US": "Something about requiring less keys?", "de_DE": "Something about requiring less keys?", "fr_FR": "fr_FR", "langUid": 126, "zh_CN": "我们可不应该让他们等太久对吧？", "ja_JP": "向こうの人をあんまり待たせない方がいいでしょう？", "ko_KR": "어서 빨리 가보자!", "zh_TW": "我們不應該讓他們等太久對吧？" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.emilie", "expression": "DEFAULT" } }, { "message": { "en_US": "[nods]", "de_DE": "[nickt]", "fr_FR": "fr_FR", "langUid": 127, "zh_CN": "[点头]", "ja_JP": "[うなずく]", "ko_KR": "[끄덕]", "zh_TW": "[點頭]" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.lea", "expression": "EXCITED" } }, { "message": { "en_US": "Très bien!", "de_DE": "Très bien!", "fr_FR": "fr_FR", "langUid": 128, "zh_CN": "没错！", "ja_JP": "トレビアン！", "ko_KR": "좋았어!", "zh_TW": "沒錯！" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.emilie", "expression": "SMILE" } }, { "type": "END_PRIVATE_MSG" } ], "elseStep": [ { "outgoing": false, "type": "RING_PRIVATE_MSG" }, { "type": "START_PRIVATE_MSG" }, { "side": "RIGHT", "order": 0, "clearSide": false, "type": "ADD_MSG_PERSON", "person": { "person": "main.lea", "expression": "DEFAULT" } }, { "side": "LEFT", "order": 0, "clearSide": false, "type": "ADD_MSG_PERSON", "person": { "person": "main.emilie", "expression": "DEFAULT" } }, { "message": { "en_US": "...?", "de_DE": "...?", "fr_FR": "fr_FR", "langUid": 144, "zh_CN": "…？", "ja_JP": "...？", "ko_KR": "...?", "zh_TW": "…？" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.lea", "expression": "SURPRISED_TOWARD" } }, { "message": { "en_US": "Another D-Link request by Lukas?", "de_DE": "Eine D-Link-Anfrage von Lukas?", "fr_FR": "fr_FR", "langUid": 145, "zh_CN": "噢，卢卡斯的直连请求！", "ja_JP": "あっ、ルーカスからのDLだ！", "ko_KR": "오, 루카스에게서 D-링크로 연락이 왔네!", "zh_TW": "噢，盧卡斯的直連請求！" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.emilie", "expression": "CURIOUS" } }, { "side": "RIGHT", "order": 5, "clearSide": false, "type": "ADD_MSG_PERSON", "person": { "person": "main.emilie", "expression": "DEFAULT" } }, { "side": "RIGHT", "order": 0, "clearSide": false, "type": "ADD_MSG_PERSON", "person": { "person": "main.lea", "expression": "DEFAULT" } }, { "side": "LEFT", "order": 0, "clearSide": false, "type": "ADD_MSG_PERSON", "person": { "person": "main.schneider", "expression": "DEFAULT" } }, { "message": { "en_US": "Holerö, you two!", "de_DE": "Holerö, ihr beiden!", "fr_FR": "fr_FR", "langUid": 146, "zh_CN": "你们好哟，两位！", "ja_JP": "グーテンターク、お2人さん！", "ko_KR": "안녕, 얘들아!", "zh_TW": "你們好喲，兩位！" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.schneider", "expression": "DEFAULT" } }, { "message": { "en_US": "Sorry to interrupt your dungeon race", "de_DE": "Sorry to interrupt your dungeon race", "fr_FR": "fr_FR", "langUid": 159, "zh_CN": "Sorry to interrupt your dungeon race", "ja_JP": "Sorry to interrupt your dungeon race", "ko_KR": "Sorry to interrupt your dungeon race", "zh_TW": "Sorry to interrupt your dungeon race" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.schneider", "expression": "TOWARDS" } }, { "message": { "en_US": "H'lin reminded me to tell you something", "de_DE": "H'lin reminded me to tell you something", "fr_FR": "fr_FR", "langUid": 163, "zh_CN": "H'lin reminded me to tell you something", "ja_JP": "H'lin reminded me to tell you something", "ko_KR": "H'lin reminded me to tell you something", "zh_TW": "H'lin reminded me to tell you something" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.schneider", "expression": "EYES_CLOSED" } }, { "message": { "en_US": "Seems the bottom floors have less locks than before?", "de_DE": "Seems the bottom floors have less locks than before?", "fr_FR": "fr_FR", "langUid": 163, "zh_CN": "Seems the bottom floors have less locks than before?", "ja_JP": "Seems the bottom floors have less locks than before?", "ko_KR": "Seems the bottom floors have less locks than before?", "zh_TW": "Seems the bottom floors have less locks than before?" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.schneider", "expression": "WONDERING" } }, { "message": { "en_US": "...?", "de_DE": "...?", "fr_FR": "fr_FR", "langUid": 144, "zh_CN": "…？", "ja_JP": "...？", "ko_KR": "...?", "zh_TW": "…？" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.lea", "expression": "SURPRISED_TOWARD" } }, { "message": { "en_US": "[nods]", "de_DE": "[nickt]", "fr_FR": "fr_FR", "langUid": 164, "zh_CN": "[点头]", "ja_JP": "[うなずく]", "ko_KR": "[끄덕]", "zh_TW": "[點頭]" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.lea", "expression": "NOD" } }, { "message": { "de_DE": "D'accord", "en_US": "D'accord", "fr_FR": "fr_FR", "langUid": 165, "zh_CN": "没问题！", "ja_JP": "もちろん！", "ko_KR": "잘 알고 있지!", "zh_TW": "沒問題！" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.emilie", "expression": "CURIOUS" } }, { "message": { "en_US": "Okay, that was it, have fun.", "de_DE": "Okay, that was it, have fun.", "fr_FR": "fr_FR", "langUid": 166, "zh_CN": "Okay, that was it, have fun.", "ja_JP": "Okay, that was it, have fun.", "ko_KR": "Okay, that was it, have fun.", "zh_TW": "Okay, that was it, have fun." }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.schneider", "expression": "LAUGH" } }, { "side": "LEFT", "type": "CLEAR_MSG" }, { "ignoreSlowDown": false, "type": "WAIT", "time": 0.3 }, { "side": "LEFT", "order": 5, "clearSide": false, "type": "ADD_MSG_PERSON", "person": { "person": "main.emilie", "expression": "SUSPICIOUS" } }, { "side": "RIGHT", "order": 0, "clearSide": false, "type": "ADD_MSG_PERSON", "person": { "person": "main.lea", "expression": "DEFAULT" } }, { "message": { "en_US": "What did he mean by that?", "de_DE": "What did he mean by that?", "fr_FR": "fr_FR", "langUid": 167, "zh_CN": "What did he mean by that?", "ja_JP": "What did he mean by that?", "ko_KR": "What did he mean by that?", "zh_TW": "What did he mean by that?" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.emilie", "expression": "SUSPICIOUS" } }, { "message": { "en_US": "...", "de_DE": "...", "fr_FR": "fr_FR", "langUid": 168, "zh_CN": "…", "ja_JP": "...", "ko_KR": "...", "zh_TW": "…" }, "autoContinue": false, "type": "SHOW_MSG", "person": { "person": "main.lea", "expression": "ANNOYED" } }, { "side": "ALL", "type": "CLEAR_MSG" }, { "type": "END_PRIVATE_MSG" } ] }, { "ignoreSlowDown": false, "type": "WAIT", "time": 0.2 }, { "type": "SHOW_OW_AR_MSG", "entity": { "player": true }, "text": { "en_US": "Lower Temple Mine now requires less keys to progress", "de_DE": "Lower Temple Mine now requires less keys to progress", "ja_JP": "Lower Temple Mine now requires less keys to progress", "ko_KR": "Lower Temple Mine now requires less keys to progress", "zh_CN": "Lower Temple Mine now requires less keys to progress", "zh_TW": "Lower Temple Mine now requires less keys to progress", "langUid": 23343 }, "time": 3, "mode": "LINE_FILL", "color": "BLUE", "yOffset": 16, "hideOutsideOfScreen": false } ],
+      "loopCount": 1,
+      "type": { "type": "MAP_ENTERED" }
+    }
   }
 ]
