@@ -154,6 +154,7 @@ Add:
 - There's now an option to have all maps and areas visited beforehand.
 - Added an option to the Open World NPC in RH Info Hub to fix any quick menu limitations
 - Added extra sandwiches :)
+- Added a new cutscene to show the lower keys requirement in Temple Mine 
 
 # v0.3.2
 Minor update related to upcoming Mod Manager compatibility
